Closed Bug 444829 Opened 18 years ago Closed 18 years ago

system color profile handle not freed on thebes shutdown

Categories

(Core :: Graphics, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: bholley, Assigned: bholley)

References

Details

Attachments

(1 file, 1 obsolete file)

not really an issue for performance, but probably should be fixed before ship.
add a patch to fix this issue as well as another issue I discovered where we were creating multiple sRGB profiles unnecessarily and leaking them. Flagging vlad for review.
Attachment #329774 - Flags: review?(vladimir)
marking this as blocking the other perf issue (that patch depends on this one).
Blocks: 444661
Comment on attachment 329774 [details] [diff] [review] patch to better handle color management resources in thebes. Only one sRGB profile is created, and all profiles and transforms are released on shutdown. This will cause problems if Init is ever called after Shutdown, because the pointers aren't nulled out.. but you knew this already :)
Attachment #329774 - Flags: review?(vladimir) → review-
updated patch
Attachment #329774 - Attachment is obsolete: true
Attachment #329876 - Flags: review?(vladimir)
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: