System color profile handle not freed on thebes shutdown - bug 444829 r=vlad