gfx/thebes/public/gfxPlatform.h
@@ -221,6 +221,11 @@ public:
     static cmsHPROFILE GetCMSOutputProfile();
 
     /**
+     * Return the sRGB ICC profile.
+     */
+    static cmsHPROFILE GetCMSsRGBProfile();
+
+    /**
      * Return sRGB -> output device transform.
      */
     static cmsHTRANSFORM GetCMSRGBTransform();
